syntax = "proto3";

option go_package = "example.com/project/taskmanager";

package taskmanager;

service TaskManagerService {
    rpc CreateTask (CreateTaskRequest) returns (TaskResponse);
    rpc UpdateTask (UpdateTaskRequest) returns (TaskResponse);
    rpc GetTask (GetTaskRequest) returns (TaskResponse);
    rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
}

message Task {
    string id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    string assigned_to = 5;
    string priority = 6;
    string due_date = 7;
    string created_at = 8;
}

message CreateTaskRequest {
    string title = 1;
    string description = 2;
    string assigned_to = 3;
    string priority = 4;
    string due_date = 5;
}

message UpdateTaskRequest {
    string id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    string assigned_to = 5;
    string priority = 6;
    string due_date = 7;
}

message GetTaskRequest {
    string id = 1;
}

message TaskResponse {
    Task task = 1;
}

message ListTasksRequest {}

message ListTasksResponse {
    repeated Task tasks = 1;
}
